add update_kubeconfig before starting shell to update env var

--- a/work/.personalrc
+++ b/work/.personalrc
@@ -36,8 +36,8 @@ function kc() {
   kubectx
 }
 
+update_kubeconfig
 source $HOME/.gloorc
-
 source <(kubectl completion bash)
 complete -F __start_kubectl k
 cd $HOME
