add vscode alias

--- a/work/.personalrc
+++ b/work/.personalrc
@@ -11,6 +11,7 @@ alias kd="kubectl describe"
 alias kail="kubectl logs -f"
 alias ka="kubectl apply"
 alias kdel="kubectl delete"
+alias c="code ."
 function kns() {
   kubectl config set-context --current --namespace=$1
 }
