--- a/work/.personalrc
+++ b/work/.personalrc
@@ -2,6 +2,7 @@ export PATH="$HOME/istio/bin:/usr/local/go/bin:$HOME/.gloo/bin:$HOME/.local/bin:
 
 eval "$(starship init bash)"
 
+alias ac="docker run -it --rm -v ${HOME}:/work -w /work --entrypoint /bin/sh amazon/aws-cli:latest"
 alias rd="ssh 172.17.243.2 sudo pihole restartdns"
 alias k="kubectl"
 alias g="glooctl"
